--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "cd ./client && npm run build",
     "install-client": "cd ./client && npm install",
     "installApp": "npm run install-client && npm install",
     "start": "node index.js",
